PI delegate email table fix

--- a/force-app/main/default/classes/ParametersDataProvider.cls
+++ b/force-app/main/default/classes/ParametersDataProvider.cls
@@ -349,7 +349,7 @@ public without sharing class ParametersDataProvider {
             DelegateLevelWrapper dlw = new DelegateLevelWrapper();
             dlw.level = PIDelegate.Delegate_Level__c;
             dlw.studyName = PIDelegate.Study_Site__r.Principal_Investigator__r.Full_Name__c +
-                    ' ' + PIDelegate.Study_Site__r.Name;
+                    ' (' + PIDelegate.Study_Site__r.Name + ')';
             delegateLevelsPI.add(dlw);
         }
         delegateLevelsPI.sort();
