--- a/force-app/main/triggers-implementation/classes/HCPEnrollmentTriggerHandler.cls
+++ b/force-app/main/triggers-implementation/classes/HCPEnrollmentTriggerHandler.cls
@@ -110,7 +110,7 @@ public without sharing class HCPEnrollmentTriggerHandler {
         }
         if (contactIdsForCreateUsers.size() > 0) ((CommunityService) ClassFactory.newInstance(CommunityService.class)).createPortalUsers(contactIdsForCreateUsers);
         if (contactsForSendNotificationMap.size() > 0) SendEmailTemplate.sendEmailNotification(CommunityService.COMMUNITY_ET_HCP, contactsForSendNotificationMap);
-        if (contactsForSendNotificationByPiMap.size() > 0) SendEmailTemplate.sendEmailNotificationWithParams(CommunityService.COMMUNITY_ET_HCP_BY_PI, contactsForSendNotificationByPiMap);
+        if (contactsForSendNotificationByPiMap.size() > 0) SendEmailTemplate.sendEmailNotification(CommunityService.COMMUNITY_ET_HCP_BY_PI, contactsForSendNotificationByPiMap);
     }
     
     @TestVisible
