--- a/force-app/main/default/classes/ResourceStudyRelatedService.cls
+++ b/force-app/main/default/classes/ResourceStudyRelatedService.cls
@@ -42,7 +42,7 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
         List<Res_study__c> resStudies = (List<Res_study__c>) DatabaseService.query(RES_STUDY_FIELDS, Res_study__c.getSObjectType(), filter);
         for (Res_study__c resStudy : resStudies) {
             if(resourceId != null || StudyResourceVisibilityService.isResourceVisibleForPE(
-                    resStudy, pState.pe, CommunityService.USER_MODE_PARTICIPANT, pState.isDelegate))
+                    resStudy, pState.pe, CommunityService.getContactUserMode(CommunityService.getUserContact().Id), pState.isDelegate))
             {
                 resourcesIds.add(resStudy.Resource__c);
             }
