--- a/force-app/main/tests/classes/Test_Batch_CreateSummaryNotifications.cls
+++ b/force-app/main/tests/classes/Test_Batch_CreateSummaryNotifications.cls
@@ -7,18 +7,33 @@ private class Test_Batch_CreateSummaryNotifications {
 
     @IsTest
     static void testBehavior() {
-        TestData.loadTestData();
-        TestData testData = new TestData();
-
         Resource__c resource = new Resource__c(
                 Content_Type__c = 'Study_Document',
                 Description__c = 'testBehavior',
                 document_type__c = 'Document',
-                Language__c = 'en_US',
                 Title__c = 'TestRes'
         );
         insert resource;
 
+        ContentVersion contentVersion = new ContentVersion(
+                Title = 'en_US',
+                PathOnClient = 'Irregular verbs.pdf',
+                VersionData = EncodingUtil.base64Decode('fdsgg5465w')
+        );
+        insert contentVersion;
+        Id docId = [SELECT Id, ContentDocumentId FROM ContentVersion LIMIT 1].ContentDocumentId;
+
+        ContentDocumentLink contentDocumentLink = new ContentDocumentLink(
+                ContentDocumentId = docId,
+                LinkedEntityId = resource.Id
+        );
+        insert contentDocumentLink;
+
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateWelcomeToStudyAlertHandler.class);
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.HideSurveyTasks.class);
+
+        TestData.loadTestData();
+        TestData testData = new TestData();
         Res_study__c resStudy = new Res_study__c(
                 Active_After_Days__c = 0.00,
                 Active_On_Status__c = PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS,
@@ -39,7 +54,8 @@ private class Test_Batch_CreateSummaryNotifications {
 
         Contact participantContact = [
                 SELECT Id, Participant_Opt_In_Status_Emails__c
-                FROM Contact WHERE Id = :testData.pe.Participant_Contact__c
+                FROM Contact
+                WHERE Id = :testData.pe.Participant_Contact__c
         ];
         participantContact.Participant_Opt_In_Status_Emails__c = true;
         update participantContact;
@@ -72,7 +88,8 @@ private class Test_Batch_CreateSummaryNotifications {
 
         Contact updatedContact = [
                 SELECT Id, Resource_Notifications__c
-                FROM Contact WHERE Id = :testData.pe.Participant_Contact__c
+                FROM Contact
+                WHERE Id = :testData.pe.Participant_Contact__c
         ];
 
         System.assertEquals(resource.Id, updatedContact.Resource_Notifications__c);
